# gravel

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  STATUS.md  UPGRADING.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  e2e.yml  publish-npm.yml  publish-python.yml  release-cli.yml  schema-drift.yml  version-sync.yml
apps/docs/: install.mdx  introduction.mdx  mint.json  quickstart.mdx
apps/docs/concepts/: architecture.mdx  data-residency.mdx  loop.mdx  manifest.mdx
apps/docs/integration/: django.mdx  express.mdx  fastapi.mdx  nextjs.mdx
apps/docs/reference/: api.mdx  auth.mdx  cli.mdx  config.mdx  tracing.mdx
cli/: DESIGN.md  go.mod  go.sum
cli/cmd/gravel/: main.go
cli/internal/cli/: detect.go  doctor.go  init.go  manifest.go  migrate.go  mount.go  prompts.go  root.go  traces.go
cli/internal/detect/: detect.go  detect_test.go
cli/internal/doctor/: version.go  version_test.go
cli/internal/dotenv/: dotenv.go  dotenv_test.go
cli/internal/e2e/: e2e_test.go
cli/internal/manifest/: diff.go  hash.go  io.go  manifest_test.go  offsets.go  offsets_test.go  scan.go  types.go
cli/internal/migrate/: migrate.go  migrate_test.go
cli/internal/migrate/sql/: postgres_bootstrap.sql  sqlite_bootstrap.sql
cli/internal/stack/: stack.go
cli/internal/version/: version.go
cli/internal/wizard/: agent_deep_scan.go  agent_deep_scan_test.go  config.go  detect.go  devport.go  devport_check.go  devport_check_test.go  devport_test.go  editor_pick.go  editor_pick_test.go  env.go  env_test.go  fileio.go  fixtures_test.go  hook.go  host_wiring.go  json.go  mount.go  mount_express.go  mount_express_test.go  mount_fastify.go  mount_fastify_test.go  mount_flask.go  mount_flask_test.go  mount_hono.go  mount_hono_test.go  mount_python.go  mount_python_test.go  next_config.go  next_config_test.go  oauth.go  oauth_test.go  paren_scanner_test.go  patch_config.go  patch_config_test.go  path_completion.go  path_completion_test.go  pillars.go  pillars_test.go  probe.go  (+13 more)
examples/django/: README.md
examples/fastapi/: .env.example  README.md  gravel_config.py  main.py  pyproject.toml
examples/nextjs-app-router/: .env.example  README.md  gravel.config.ts  package.json
examples/nextjs-app-router/app/: layout.tsx  page.tsx
examples/nextjs-app-router/app/admin/ai/[[...slug]]/: route.ts
python/gravel/: .gitignore  README.md  alembic.ini  pyproject.toml
python/gravel/alembic/: README.md  env.py
python/gravel/src/artanis_gravel/: __init__.py  __main__.py  _cli.py  _env_writer.py  _github_api.py  _github_state.py  _handler.py  _migrations_status.py  _pr_body.py  _prompts_submit.py  _push_status.py  _rate_limit.py  _repo_detect.py  asgi.py  auth.py  auto.py  cli.py  dashboard_assets.py  django.py  doctor.py  fastapi.py  flask.py  login.py  samples_query.py  schema.py  schema_dump.py  types.py  version_check.py
python/gravel/src/artanis_gravel/analyze/: __init__.py  client.py
python/gravel/src/artanis_gravel/db/: __init__.py  bootstrap.py
python/gravel/src/artanis_gravel/evals/: __init__.py  runner.py
python/gravel/src/artanis_gravel/judge/: __init__.py  client.py
python/gravel/src/artanis_gravel/manifest/: __init__.py  hash.py  hook.py  io.py  scan.py  types.py
python/gravel/src/artanis_gravel/tracing/: __init__.py  anthropic_patch.py  fetch_patch.py  gemini_patch.py  langchain_patch.py  openai_patch.py  persist.py
python/gravel/src/artanis_gravel/wizard/: __init__.py  config_file.py  detect.py  doctor.py  env.py  migrate.py  mount.py  oauth.py
python/gravel/tests/: conftest.py  test_analyze_client.py  test_asgi.py  test_cli_wrapper.py  test_django.py  test_doctor.py  test_embedded_journey.py  test_eval_runner.py  test_fastapi_mount_path.py  test_fastapi_prompts_only.py  test_flask_mount.py  test_github_api.py  test_handler_helpers.py  test_handler_routes.py  test_judge_client.py  test_judge_integration.py  test_login.py  test_manifest_diff_summary.py  test_pr_body_cross_stack.py  test_repo_detect.py  test_samples_query.py  test_schema_timestamp.py  test_tracing_anthropic.py  test_tracing_anthropic_real.py  test_tracing_bootstrap.py  test_tracing_context.py  test_tracing_fetch.py  test_tracing_gemini.py  test_tracing_gemini_real.py  test_tracing_langchain.py  test_tracing_langchain_real.py  test_tracing_openai.py  test_tracing_openai_real.py  test_try_open_database.py  test_version_check.py  test_wizard_init.py  test_wizard_oauth.py
tests-e2e/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
tests-e2e/e2e/: api-roundtrip.spec.ts  login-and-render.spec.ts
tests-e2e/test-app/: package.json
tests-e2e/test-app/src/: server.ts
tests/fixtures/pr-body/: cases.json
tools/: check-sdk-versions-in-sync.sh  release.sh  smoke-landlord-ai.sh  smoke.sh  sync-dashboard-dist.sh  test-agent-install-fastapi.sh  test-agent-install.sh
tools/capture-vertex/: capture.py
